--- a/src/Styles/_navbar.css
+++ b/src/Styles/_navbar.css
@@ -1,31 +1,42 @@
 .appHeader{
-  width: 100%;
-  height: 30px;
-  margin: 0;
-  overflow: hidden;
-  padding: 3px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  height: 60px;
   align-items: center;
-  box-shadow: 0px 2px #2226;
-  position: fixed;
-
 }
-h1{
-  margin: 0;
-  padding: 0;
+.appHeader>h1{
+  margin: 4px;
   font-size: 1.4em;
-  width: 30%;
+  color:#3d3131;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
 }
-nav{
-  width: 70%;
+.appHeader>h1 img{
+  width: 40px;
+  margin-right: 10px;
 }
 nav>ul{
   display: flex;
-  justify-content: space-between;
   flex-direction: row;
-  width: 100%;
+  width: 50vw;
+  max-width: 150px;
+  justify-content: space-around;
+  align-items: center;
 }
 nav>ul>li{
-  margin: 5px;
+  cursor: pointer;
+  list-style-type: none;
 }
+nav>ul img{
+  width: 25px;
+}
+nav>ul img:hover{
+  scale: 1.1 1.1;
+
+}
+nav>ul img:active{
+  scale: 0.95 0.95;
+}
+
