--- a/src/Styles/_repos.css
+++ b/src/Styles/_repos.css
@@ -1,6 +1,177 @@
 section.repos{
-  margin-top: 40px;
+  margin-top: 10px;
   overflow: auto;
   height: calc(100% - 40px);
   padding: 20px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: grey;
+}
+section.repos header{
+  color: #685d5d;
+}
+
+article.repoDisplay{
+  width: 90vw;
+  max-width: 400px;
+  border-radius: 20px;
+  margin: 5px;
+  padding: 20px;
+  box-shadow: 1px 1px #000, -0.5px -0.2px #0004;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+article.repoDisplay header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  line-height: 120%;
+  margin-bottom: 10px;
+}
+article.repoDisplay header h1{
+  text-decoration: underline;
+  line-height: 120%;
+  margin-bottom: 4px;
+}
+article.repoDisplay header p{
+  line-height: 120%;
+  margin-bottom: 10px;
+  font-style: italic;
+  font-size: 0.8em;
+}
+article.repoDisplay header p.desc{
+  line-height: 120%;
+  font-style: normal;
+  font-size: 0.9em;
+  text-align: center;
+}
+article.repoDisplay main{
+  display: flex;
+  flex-direction: column;
+}
+article.repoDisplay footer{
+  display: flex;
+  justify-content: center;
+}
+article.repoDisplay footer a{
+  display: flex;
+  justify-content: center;
+  width: 150px;
+  margin: 7px;
+  border: 1px solid #3333;
+  padding: 10px;
+  border-radius: 15px;
+  color: white;
+  text-decoration: none;
+  background-color: grey;
+}
+.visibility{
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  border-radius: 15px;
+  background-color: #5557;
+  color: white;
+  font-size: 0.8em;
+  padding: 5px;
+  font-weight: 100;
+  z-index: 10;
+}
+.pagination{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 10px;
+  justify-content: space-around;
+  width: 80vw;
+  max-width: 250px;
+  margin: 0 auto;
+}
+.pagination a{
+  text-decoration: none;
+  color: black;
+  width: 35px;
+  height: 35px;
+  display: grid;
+  place-items: center;
+}
+.pagination button{
+  border-radius: 7px;
+  margin: 5px;
+  display: grid;
+  border: 1px solid #3338;
+  place-items: center;
+}
+@media screen and (min-width: 900px) {
+  section.repoWindow main{
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+section.repoPage{
+  width: 100%;
+  position: relative;
+  box-shadow: 1px 2px 2px 1px black, 3px 3px green, 5px 5px #3338;
+  height: 100%;
+  margin-top: 15px;
+  border-radius: 20px;
+  overflow: auto;
+  padding: 15px;
+  padding-bottom: 50px;
+}
+section.repoPage li{
+  list-style-type: none;
+}
+section.repoPage a{
+  text-decoration: none;
+  
+}
+section.repoPage .back{
+  width: 40px;
+  height: 20px;
+  margin-bottom: 10px;
+}
+section.repoPage header{
+  margin: 20px;
+  margin-top: 0;
+}
+section.repoPage header h3{
+  margin-bottom: 10px;
+  width: 100%;
+  text-align: center;
+}
+section.repoPage li.clone{
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  display: flex;
+  z-index: 10;
+}
+.clone img{
+  width: 20px;
+}
+section.repoPage .links{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+section.repoPage .links li{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+section.repoPage .links li img{
+  width: 20px;
+}
+section.repoPage .languages{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  font-size: 0.8em;
 }
