--- a/src/Styles/_repos.css
+++ b/src/Styles/_repos.css
@@ -1,5 +1,6 @@
 section.repos{
   margin-top: 10px;
+  margin-bottom: 50px;
   position: relative;
   padding: 20px;
   display: flex;
@@ -105,7 +106,8 @@ article.repoDisplay footer a:active {
 .pagination a{
   text-decoration: none;
   color: black;
- 
+  width: 100%;
+  height: 100%;
   display: grid;
   place-items: center;
   color: white;
@@ -129,7 +131,8 @@ article.repoDisplay footer a:active {
 }
 
 section.repoPage{
-  width: 100%;
+  width: 90vw;
+  max-width: 500px;
   position: relative;
   box-shadow: 1px 2px 2px 1px black, 3px 3px green, 5px 5px #3338;
   height: 100%;
