--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -136,3 +136,24 @@ main.main{
   animation-duration: 1s;
   animation-iteration-count: infinite;
 }
+
+.errorPage{
+  width: 100ve;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+.errorPage div{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.errorPage button{
+  width: 80px;
+  padding: 8px;
+  background-color: #0004;
+  margin: 5px;
+  border-radius: 8px;
+  color: white;
+}
